--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -88,6 +88,74 @@ header {
 
 .section-one-puppy {
     height: 728px;
-    background-color: blue;
     margin-top: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.section-one-puppt-one {
+    width: 460px;
+    height: 322px;
+}
+
+.puppy-h2 {
+    width: 310px;
+    height: 114px;
+}
+
+
+
+.puppy-h2 h2 {
+    font-size: 44px;
+    line-height: 57px;
+    display: flex;
+    align-items: center;
+    color: #FFFFFF;
+}
+
+.puppy-p {
+    margin-top: 42px;
+}
+
+.puppy-p p {
+    color: #CDCDCD;
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: 400;
+    
+}
+
+.puppy-btn {
+    margin-top: 43px;
+    width: 207px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.puppy-btn button  {
+    border: none;
+    background-color: #F1CDB3;
+    border-radius: 100px;
+    padding: 15px 45px;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22px;
+    color: #292929;
+}
+
+.puppy-btn button:hover {
+    background-color: #FDDCC4;
+}
+
+
+.section-one-puppt-two {
+    width: 698px;
+    height: 728px;
+    background-image: url("../../assets/images/start-screen-puppy.png");
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
