--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -245,3 +245,568 @@ header {
         flex-direction: column-reverse;
     }
 }
+
+/* section-three */
+
+.section-three {
+    width: 1280px;
+    height: 877px;
+    background-color: #F6F6F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.section-three-box {
+    width: 1200px;
+    height: 697px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-three-box-title {
+    width: 400px;
+    height: 90px;
+    margin-bottom: 60px;
+    text-align: center;
+    display: flex;
+}
+
+.section-three-box-title h3 {
+    color: #545454;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 45px;
+    letter-spacing: 0.06em;
+    
+}
+
+
+
+
+.slider-containter {
+    width: 1200px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+    height: 435px;
+}
+
+.contener-slide {
+    width: 95%;
+    height: 435px;
+
+    display: flex;
+    justify-content: space-evenly;
+    /* overflow: hidden; */
+}
+
+.card-slider {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.card {
+    width: 270px;
+    height: 435px;
+    background-color: #FAFAFA;
+    text-align: center;
+    margin: 0 50px;
+    
+}
+
+.card-dimg {
+    width: 270px;
+    height: 270px;
+}
+
+.card-dimg img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-title {
+    margin: 30px 0;
+}
+.card-title h2 {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+}
+
+.card-button button {
+    width: 187px;
+    height: 52px;
+    border: 2px solid #F1CDB3;
+    border-radius: 100px;
+}
+
+
+#prev-Btn {
+    position: absolute;
+    left: 54px;
+    top: 50%;
+    z-index: 111111;
+
+}
+
+#prev-Btn button {
+    width: 52px;
+    height: 52px;
+    border: 2px solid #F1CDB3;;
+    border-radius: 100px;
+
+}
+
+#next-Btn {
+    position: absolute;
+    right: 25px;
+    top: 50%;
+    z-index: 111111;
+
+}
+
+#next-Btn button {
+    width: 52px;
+    height: 52px;
+    border: 2px solid #F1CDB3;;
+    border-radius: 100px;
+
+}
+
+.section-three-button {
+    margin-top: 60px;
+}
+
+.section-three-button button {
+    width: 261px;
+    height: 52px;
+    background-color: #F1CDB3;
+    border: none;
+    border-radius: 100px;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0.06em;
+    color: #292929;
+}
+
+/* section-four */
+
+.section-four {
+    width: 1280px;
+    height: 611px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-four-box {
+    width: 1200px;
+    height: 431px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.four-box-title {
+    width: 308px;
+    height: 90px;
+    margin-bottom: 60px;
+}
+
+.four-box-title h2 {
+    font-weight: 400;
+    font-size: 35px;    
+    line-height: 45px;
+    letter-spacing: 0.06em;
+    color: #545454;
+    display: flex;
+    text-align: center;
+}
+
+.four-box-flex {
+    width: 1026px;
+    height: 281px;
+}
+
+.one-box {
+    width: 100%;
+    height: 113px;
+    display: flex;
+    justify-content: space-between;
+}
+.flex-item-four {
+    width: 153px;
+    height: 113px;
+}
+
+.one-box > * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.box-two > * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.flex-item-one {
+    width: 82px;
+    height: 113px;
+}
+
+.flex-item-two {
+    width: 150px;
+    height: 113px;
+}
+
+.flex-item-three {
+    width: 60px;
+    height: 113px;
+}
+
+
+.item-one-image {
+    width: 60px;
+    height: 60px;
+}
+
+.item-one-image img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.box-two {
+    width: 100%;
+    height: 113px;
+    display: flex;
+    justify-content: center;
+    gap: 120px;
+    margin-top: 55px;
+}
+
+.flex-item-six {
+    width: 89;
+    height: 113px;
+}
+
+.flex-item-seven {
+    width: 101px;
+    height: 113px;
+}
+.flex-item-eight {
+    width: 165px;
+    height: 113px;
+}
+
+.flex-item-nine {
+    width: 143px;
+    height: 113px;
+}
+
+.item-one-title {
+    margin-top: 30px;
+}
+
+.item-one-title h4 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+/* section-five */ 
+
+.section-five {
+    width: 1280px;
+    height: 364px;
+    background-color: #F6F6F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.five-box {
+    width: 915px;
+    height: 282px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.five-box-img {
+    width: 505px;
+    height: 261px;
+}
+
+.five-box-img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.five-box-textarea {
+    width: 380px;
+    height: 282px;
+}
+
+.texarea-header {
+    width: 300px;
+    height: 90px;
+    margin-bottom: 20px;
+}
+
+.texarea-header h3 {
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 45px;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.textarea-bank {
+    width: 307px;
+    height: 17px;
+    margin-bottom: 20px;
+}
+
+.textarea-bank h5 {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.textarea-bank-card {
+    width: 349px;
+    height: 43px;
+    color: #545454;
+    display: flex;
+    align-items: center;
+    background-color: #F1CDB3;
+    margin-bottom: 20px;
+}
+
+.textarea-bank-card img {
+  margin-left: 15px;
+}
+
+
+.textarea-bank-card p {
+    letter-spacing: 0.06em;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+}
+
+.textarea-paragraf {
+    width: 380;
+    height: 72px;
+    overflow: hidden;
+}
+
+.textarea-paragraf p {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #B2B2B2;
+
+}
+
+footer {
+    width: 1280px;
+    height: 350px;
+    background-color: #513D2F;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-box {
+    width: 1200px;
+    height: 310px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-box-one {
+    width: 278px;
+    height: 234px;
+}
+
+.footer-box-one-title {
+    width: 278px;
+    height: 90px;
+    margin-bottom: 40px;
+}
+
+
+
+.footer-box-one-title h3 {
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 45px;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+}
+
+.footer-box-mail {
+    display: flex;
+    width: 251px;
+    height: 32px;
+    align-items: center;
+    margin-bottom: 44px;
+}
+
+
+.footer-box-mail a {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+}
+.footer-box-mail div {
+    width: 40px;
+    height: 32px;
+    margin-right: 20px;
+}
+.footer-box-mail div img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.footer-box-phone {
+    width: 239px;
+    height: 32px;
+    display: flex;
+    
+    align-items: center;
+}
+.footer-box-phone a {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+}
+
+.footer-box-phone div {
+    margin-right: 20px;
+    width: 40px;
+    height: 32px;
+}
+
+.footer-box-phone div img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.footer-box-two {
+    width: 302px;
+    height: 234px;
+}
+
+.box-two-title {
+    width: 270px;
+    height: 90px;
+    margin-bottom: 34px;
+}
+.box-two-title h3 {
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 45px;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+}
+
+.location {
+    width: 260px;
+    height: 46px;
+    display: flex;
+}
+
+.location h4 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+}
+
+.box-two-location-one {
+    display: flex;
+    width: 302px;
+    height: 46px;
+    margin-bottom: 32px;
+}
+
+.box-two-location-one div {
+    margin-right: 20px;
+}
+
+.box-two-location-one h4 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+}
+
+.box-two-location-two {
+    width: 302px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+}
+
+.box-two-location-two div {
+    margin-right: 20px;
+    width: 22px;
+    height: 32px;
+}
+.box-two-location-two div img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.box-two-location-two h4 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+}
+
+.footer-box-three {
+    width: 300px;
+    height: 310px;
+}
+
+.footer-box-three img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
