--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -292,61 +292,65 @@ header {
     position: relative;
     display: flex;
     justify-content: center;
-
     height: 435px;
 }
 
 .contener-slide {
     width: 95%;
-    height: 435px;
-
-    display: flex;
-    justify-content: space-evenly;
-    /* overflow: hidden; */
+    margin: 0 auto;
+    overflow: hidden;
 }
 
-.card-slider {
+.card-wrap {
     display: flex;
-    justify-content: space-between;
+    width: 200%;
+    justify-content: space-around;
+    transition: 1s;
     
 }
 
 .card {
     width: 270px;
     height: 435px;
-    background-color: #FAFAFA;
+    background: #F6F6F6;
+}
+.card img {
+    width: 100%;
+}
+.card p {
+    color: #545454;
     text-align: center;
-    margin: 0 50px;
+    margin: 30px 0;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
     
 }
-
-.card-dimg {
-    width: 270px;
-    height: 270px;
+.learnMoreBox{
+    display: flex;
+    justify-content: center;
 }
-
-.card-dimg img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.card-title {
-    margin: 30px 0;
-}
-.card-title h2 {
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 23px;
-    letter-spacing: 0.06em;
-}
-
-.card-button button {
-    width: 187px;
-    height: 52px;
+.learnMoreBtn{
+    color: #292929;
+    font-size: 17px;
+    font-family: 'Georgia';
+    font-style: normal;
     border: 2px solid #F1CDB3;
-    border-radius: 100px;
+    letter-spacing: 0.06em;
+    padding: 10px 15px;
+    border-radius: 2rem;
+    cursor: pointer;
+    background: #FAFAFA;
+    height: 52px;
+    width: 187px;
 }
+.learnMoreBtn:hover{
+    background-color:#FDDCC4; ;
+}
+
+
 
 
 #prev-Btn {
