--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -142,6 +142,7 @@ main {
     align-items: center;
     text-align: center;
     flex-direction: column;
+    margin-bottom: 100px;
 }
 .container-title {
     width: 400px;
@@ -169,7 +170,7 @@ main {
     grid-template-columns: repeat(4, 270px);
     justify-content: center;
     gap: 40px;
-    
+  margin-bottom: 45px;
 }
 
 .grid-card {
