--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -131,6 +131,22 @@ nav ul li:nth-child(2) {
 }
 
 
+@media (max-width: 770px) {
+    .heder {
+        width: 768px;
+    }
+}
+@media (max-width: 770px) {
+    header {
+        width: 320px;
+    }
+    .navigation {
+        display: none;
+    }
+    /* .logo {
+        position: absolute;
+    } */
+}
 main {
     width: 1280px;
     background-color: #F6F6F6;
@@ -138,6 +154,8 @@ main {
     justify-content: center;
     align-items: center;
 }
+
+
 
 .container {
     width: 1200px;
@@ -150,7 +168,18 @@ main {
     flex-direction: column;
     margin-bottom: 100px;
 }
-.container-title {
+
+@media (max-width: 768px) {
+    main {
+        width: 768px;
+    }
+    .container  {
+        width: 768px;
+    }
+}
+
+
+.container-title  {
     width: 400px;
     height: 90px;
     color: #545454;
@@ -158,6 +187,21 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 322px) {
+    .container {
+        width: 320px;
+    }
+    .container-title {
+        width: 300px;
+        height: 64px;
+
+    }
+    .container-title h3 {
+        font-size: 25px;
+        line-height: 32px;
+    }
 }
 
 .container-title h3 {
@@ -177,6 +221,31 @@ main {
     justify-content: center;
     gap: 40px;
   margin-bottom: 45px;
+}
+@media (max-width: 768px) {
+    main {
+        width: 768px;
+    }
+    .container  {
+        width: 768px;
+        height: auto;
+    }
+    .container-grid {
+        grid-template-columns: repeat(2, 170px);
+        justify-content: space-evenly;
+        height: auto;
+    }
+}
+@media (max-width: 322px) {
+    .container  {
+        width: 320px;
+        height: auto;
+    }
+    .container-grid {
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: space-evenly;
+        height: auto;
+    }
 }
 
 .grid-card {
@@ -476,4 +545,34 @@ footer {
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+
+@media (max-width: 770px) {
+    footer {
+        width: 768px;
+        height: auto;
+    }
+    .footer-box {
+        width: 768px;
+        flex-wrap: wrap;
+        height: auto;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+  
+    .footer-box-three {
+        margin: 10vw 0 4px 0;
+    }
+}
+
+@media (max-width: 322px) {
+    footer {
+        width: 320px;
+    }
+    .footer-box {
+        width: 320px;
+        flex-direction: column;
+        gap: 10vw;
+    }
 }
